# super-signal

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  COPR_SETUP.md  DEPLOYMENT_QUICKSTART.md  GITHUB_SECRETS_SETUP.md  LICENSE  MANUAL_PUBLISH.bat  MANUAL_PUBLISH.sh  PYPI_DEPLOYMENT.md  README.md  RPM_PACKAGING.md  pyproject.toml  requirements.txt  super-signal.bat  super-signal.spec
.claude/: settings.local.json
.github/workflows/: publish-pypi.yml  test.yml
super_signal/: __init__.py  __main__.py  cache.py  cli.py  config.py  main.py  models.py
super_signal/analyzers/: __init__.py  risk_analyzer.py
super_signal/fetchers/: __init__.py  finviz.py  yahoo_finance.py
super_signal/formatters/: __init__.py  base.py  csv_formatter.py  display.py  json_formatter.py  text_formatter.py
tests/: __init__.py  _tmp_vix_smoke_test.py  conftest.py  test_cache.py  test_cli.py  test_config.py  test_display.py  test_finviz.py  test_formatters.py  test_models.py  test_risk_analyzer.py  test_yahoo_finance.py
