[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-signal"
version = "2.5.0"
description = "Super Signal - Advanced stock analysis tool with risk factor detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TradingAsBuddies"}
]
keywords = ["stocks", "finance", "screening", "risk-analysis", "yahoo-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tzdata>=2023.3",
]

[project.urls]
Homepage = "https://github.com/TradingAsBuddies/super-signal"
Repository = "https://github.com/TradingAsBuddies/super-signal"
Issues = "https://github.com/TradingAsBuddies/super-signal/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.4.0",
    "ruff>=0.0.285",
]

[project.scripts]
super-signal = "super_signal.main:main"

[tool.setuptools.packages.find]
include = ["super_signal*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 88
target-version = "py310"
